feat: call backend in the app
